# vsdlc

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  RELEASE.md  output  pyproject.toml  requirements.txt
data/interim/: eligible_repos.jsonl  eligible_repos_enriched.jsonl  excluded_repos.jsonl  filter_summary.json  second_frame_search_checkpoint.json
data/processed/: TEMPLATE_NOTE.md  baseline_comparison.json  (+49 more)
docs/: annotation_example.json  annotation_protocol.md  baseline_pilot_summary.md  decontamination_study_plan.md  documentation_audit.md  inspection_validation_protocol.md  reproducibility.md  sample_audit.md  zenodo_release_checklist.md
scripts/: analyze_rq2_assignment_sensitivity.py  analyze_rq2_contamination_structure.py  analyze_second_frame_contamination.py  analyze_target_sensitivity.py  apply_claude_r2_360_annotations.py  backfill_metadata.py  compute_annotation_agreement.py  compute_exclude_disagreement_stats.py  compute_kappa_bootstrap_ci.py  compute_rq2_query_family_stats.py  create_gold_sample.py  create_inspection_sample.py  create_reliability_batch.py  create_second_frame_sample.py  create_second_inspector_blank.py  evaluate_baseline_heuristics.py  evaluate_inspection_validation.py  evaluate_learned_baselines.py  evaluate_second_inspection.py  repair_seed_checkpoint.py  run_repo_filter.py  run_second_frame_filter.py  run_second_frame_search.py  run_seed_search.py  validate_second_inspection.py
tests/: __init__.py  test_backfill_metadata.py  test_baseline_heuristics.py  test_decontamination.py  test_decontamination_schema.py  test_exclude_disagreement_stats.py  test_inspection_validation.py  test_kappa_bootstrap.py  test_learned_baselines.py  test_mining.py  test_pilot_cli.py  test_reliability_batch.py  test_rq2_contamination_structure.py  test_second_frame.py  test_second_inspection.py  test_target_sensitivity.py
(+39 files in other folders)
