[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsdlc-mining"
version = "0.1.0"
description = "Repository mining framework for AI-assisted software development provenance (Phases 1–2)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "César Andrés Sánchez" },
    { name = "David Martin Moncunill" },
]
keywords = [
    "software-engineering",
    "mining-software-repositories",
    "github",
    "traceability",
    "provenance",
    "ai-assisted-development",
    "reproducible-research-artifact",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/PLACEHOLDER_ORG/vsdlc-mining"
Repository = "https://github.com/PLACEHOLDER_ORG/vsdlc-mining"
Documentation = "https://github.com/PLACEHOLDER_ORG/vsdlc-mining/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/vsdlc_mining"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/CITATION.cff",
  "/docs",
  "/scripts",
  "/tests",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
packages = ["vsdlc_mining"]
mypy_path = "src"
ignore_missing_imports = true
